k8s/service.yaml
# Copyright 2026 HY Chang
# SPDX-License-Identifier: Apache-2.0

apiVersion: v1
kind: Service
metadata:
  name: appengine-rust-service
  labels:
    app: appengine-rust
spec:
  type: ClusterIP
  selector:
    app: appengine-rust
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
